<resources>
    <string name="app_name">Test</string>
    <string name="test_series">Test Series</string>
    <string name="take_tests_and">Take Tests and</string>
    <string name="know_your_standings_in_the_race">know your standings in the race.</string>
    <string name="todo">TODO</string>
    <string name="tests">  Test(s)</string>
    <string name="an_all_india_level_examination_for_admission_into">An all-India level examination for admission into</string>
    <string name="india_s_best_medical_colleges">India\'s best medical colleges.</string>
    <string name="string_india_s_best_medical_colleges" />
</resources>