<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_20ssp"
        android:layout_marginTop="@dimen/_20sdp"
        app:cardCornerRadius="@dimen/_12ssp"
        tools:ignore="MissingConstraints">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_60sdp"
            android:padding="@dimen/_10ssp"
            android:orientation="horizontal"
            android:baselineAligned="false">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:padding="@dimen/_5ssp"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/testName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/know_your_standings_in_the_race"
                    android:textStyle="bold"
                    android:textSize="@dimen/_12ssp"/>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/noOfTest"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/_10ssp"
                        android:layout_weight="1"
                        android:text="@string/app_name"/>
                    <TextView
                        android:id="@+id/test"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/_10ssp"
                        android:layout_weight="1"
                        android:text="@string/tests"/>
                </LinearLayout>

            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/testId"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:textSize="@dimen/_20ssp"
                    android:layout_weight="1"
                    android:text="@string/app_name"
                    android:gravity="end"
                    tools:ignore="NestedWeights" />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>